--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="message_not_enter_code">Вы не ввели код!</string>
     <string name="message_error_select">Ошибка чтения из базы данных, обратитесь к администратору</string>
     <string name="message_code_not_find">Такой код не найден</string>
+    <string name="button_text">ОК</string>
 </resources>
