--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,8 @@
     <string name="message_error_select">Ошибка чтения из базы данных, обратитесь к администратору</string>
     <string name="message_code_not_find">Код не найден</string>
     <string name="button_text">ОК</string>
+
+    <!-- Admin list -->
+    <string name="admin_alert_error_reqcode">Ошибка. Неверный request code</string>
+
 </resources>
