change font. Processing stage

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,4 +62,16 @@
     <string name="nav_provider_network">Network</string>
     <string name="nav_location_settings">Настройки навигации</string>
     <string name="nav_error_sdk">Ошибка! Не совместимо с текущей sdk!</string>
+
+    <!-- Weather activity -->
+    <string name="weather_update">Обновлено </string>
+    <string name="weather_humidity">Влажность: </string>
+    <string name="weather_pressure">Атм. давление: </string>
+    <string name="weather_wind">Ветер: </string>
+    <string name="weather_update">время</string>
+
+    <!-- work with Font -->
+    <string name="error_set_font_1">Невозможно установить шрифт </string>
+    <string name="error_set_font_1"> вместо </string>
+
 </resources>
