add time, timer service create stage

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,8 @@
 
     <string name="YES">да</string>
     <string name="NO">нет</string>
+    <!-- Main -->
+    <string name="start_text">Готовы?</string>
 
     <!-- Maps -->
     <string name="maps_coordiantes">не найдены координаты</string>
